--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
+certifi==2017.7.27.1
+chardet==3.0.4
 Django==1.9
-django-taggit==0.17.1
-Pillow
-django-haystack==2.4.0
+django-haystack==2.5.0
+idna==2.6
+Markdown==2.6.2
+olefile==0.44
+Pillow==4.2.1
+pkg-resources==0.0.0
 pysolr==3.3.2
+pytz==2017.2
+requests==2.18.4
+urllib3==1.22
